--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@nestjs/swagger": "11.1.3",
     "@nestjs/throttler": "6.4.0",
     "@nestjs/websockets": "11.0.17",
-    "@prisma/client": "^6.7.0",
+    "@prisma/client": "^6.17.1",
     "aws-sdk": "2.1692.0",
     "axios": "1.8.4",
     "bcrypt": "5.1.1",
@@ -60,6 +60,7 @@
     "passport-google-oauth20": "2.0.0",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
+    "pdfkit": "^0.17.2",
     "puppeteer": "24.6.1",
     "qrcode": "1.5.4",
     "reflect-metadata": "0.2.2",
