shipment type only will be express

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "aws-sdk": "2.1692.0",
     "axios": "1.8.4",
     "bcrypt": "5.1.1",
+    "bcryptjs": "^3.0.2",
     "bullmq": "5.48.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
@@ -85,6 +86,7 @@
     "@types/nodemailer": "6.4.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "1.0.38",
+    "@types/pdfkit": "^0.17.3",
     "@types/qrcode": "^1.5.5",
     "@types/speakeasy": "2.0.10",
     "@types/supertest": "6.0.3",
